Travis config added, postgres added to travis and env vars

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ language: elixir
 elixir:
   - '1.8.2'
 otp_release: '21.3'
+services:
+  - postgresql
+env:
+  global:
+  - POSTGRES_PASSWORD=postgres
+  - MIX_ENV=travis  
